5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1712_2496.log
== TEST (2019-05-09 08:38:06) 
-- CODE:
soma = 0
nmr = int(input("Digite um número: "))
 
while (nmr!= -1)
soma = soma + nmr
nmr = int(input("Digite um número: "))
print (soma)
-- ERROR:
File "XXXX", line 4
    while (nmr!= -1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:38:46) 
-- CODE:
soma = 0
nmr = int(input("Digite um número: "))
 
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um número: "))
   print (soma)
	

-- ERROR:
File "XXXX", line 6
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 08:39:22) 
-- CODE:
soma = 0
nmr = int(input("Digite um número: "))
 
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um número: "))
	
print (soma)
	

-- EXECUTION TIME:
0.149779
-- ERROR:
  File "/home/codebench/codes/1712/2496/main.py", line 6
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:40:03) 
-- CODE:
soma = 0
nmr = int(input("Digite um número: "))
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um número: "))
	
print (soma)
	

-- ERROR:
File "XXXX", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 08:40:25) 
-- CODE:
soma = 0
nmr = int(input("Digite um número: "))
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um número: "))
print (soma)
	

-- EXECUTION TIME:
0.123248
-- ERROR:
  File "/home/codebench/codes/1712/2496/main.py", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 08:40:41) 
-- CODE:
soma = 0
nmr = int(input("Digite um número: "))
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um número: "))
print (soma)
	

-- EXECUTION TIME:
0.253977
-- ERROR:
  File "/home/codebench/codes/1712/2496/main.py", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:40:45) 
-- CODE:
soma = 0
nmr = int(input("Digite um número: "))
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um número: "))
print (soma)
	

-- ERROR:
File "XXXX", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 08:41:01) 
-- CODE:
soma = 0
nmr = int(input("Digite um numero: "))
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um numero: "))
print (soma)
	

-- EXECUTION TIME:
0.158179
-- ERROR:
  File "/home/codebench/codes/1712/2496/main.py", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:41:06) 
-- CODE:
soma = 0
nmr = int(input("Digite um numero: "))
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um numero: "))
print (soma)
	

-- ERROR:
File "XXXX", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 08:41:10) 
-- CODE:
soma = 0
nmr = int(input("Digite um numero: "))
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um numero: "))
print (soma)
	

-- EXECUTION TIME:
0.117091
-- ERROR:
  File "/home/codebench/codes/1712/2496/main.py", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:41:21) 
-- CODE:
soma = 0
nmr = int(input("Digite um numero: "))
while (nmr!= -1): 
	soma = soma + nmr
   nmr = int(input("Digite um numero: "))
print (soma)
	

-- ERROR:
File "XXXX", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:42:07) 
-- CODE:
soma = 0
nmr = int(input("Digite um numero: "))
while (nmr != -1): 
	soma = soma + nmr
   nmr = int(input("Digite um numero: "))
print(soma)
	

-- ERROR:
File "XXXX", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:42:27) 
-- CODE:
soma = 0
nmr = int(input("Digite um numero: "))
while (nmr != -1): 
	soma = soma + nmr
   nmr = float(input("Digite um numero: "))
print(soma)
	

-- ERROR:
File "XXXX", line 5
    nmr = float(input())
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:42:43) 
-- CODE:
soma = 0
nmr = int(input("Digite um numero: "))
while (nmr != -1): 
	soma = soma + nmr
   nmr = int(input("Digite um numero: "))
print(soma)
	

-- ERROR:
File "XXXX", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:42:50) 
-- CODE:
soma = 0
nmr = int(input("Digite um numero: "))
while (nmr != -1): 
	soma = soma + nmr
   nmr = int(input("Digite um numero:"))
print(soma)
	

-- ERROR:
File "XXXX", line 5
    nmr = int(input())
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 08:44:36) 
-- CODE:
soma = 0 
num = int(input(""))
while (num != -1):
	soma = soma + num
	num = int(input(""))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 08:44:50) 
-- CODE:
soma = 0 
num = int(input(""))
while (num != -1):
	soma = soma + num
	num = int(input(""))
print(soma)
-- EXECUTION TIME:
0.249283
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
